add JVM args for tests