@@ -36,4 +36,10 @@ graalvmNative {
     }
 }
 
+tasks.named('test') {
+    jvmArgs(
+            '--add-opens=java.base/sun.security.util=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED'
+    )
+}
 
